  * debian/control: Set build-dependency on debhelper to >= 6.0.7, since
    dh_lintian appeared in that version
  * debian/in/PACKAGE.dirs: Drop lintian overrides directory

  * debian/in/PACKAGE.lintian-overrides: Drop unused overrides about
    binary program defining RPATH

  * debian/control: Bump Standards-Version to 3.8.0 (no changes needed)

 -- Rafael Laboissiere <rafael@debian.org>  Mon, 23 Jun 2008 20:33:02 +0200

octave3.0 (1:3.0.1-4) unstable; urgency=low

  * New patches:
    - 50_add_syspath.dpatch: Prepend library path again in the loadpath
      (closes: #477556). Thanks to Kim Hansen <kimhanse@gmail.com> for the
      patch.
    - randn_doc.dpatch: better explanation of randn()'s return value
      (closes: #477349)
    - no_pdf_in_print.dpatch: explain that PDF generation is not possible with
      packaged gnuplot (closes: #478677)
    - imshow_only_handles_octave_images.dpatch: documentation patch, imshow
      only handles Octave's image format (closes: #478271)
    - dont_set_helvetica.dpatch: Go with gnuplot's default font as Helvetica
      is not available as a TrueType font (closes: #477688)

  * debian/in/PACKAGE.conf: Remove explicit library path addition.

 -- Thomas Weber <thomas.weber.mail@gmail.com>  Sat, 24 May 2008 13:49:51 +0200

octave3.0 (1:3.0.1-3) unstable; urgency=low

  [ Rafael Laboissiere ]
  * debian/in/PACKAGE.conf: Substitute version of package in the
    addpath(.../oct/) command

  [ Thomas Weber ]
  * Add -dbg package

 -- Thomas Weber <thomas.weber.mail@gmail.com>  Thu, 01 May 2008 12:49:49 +0200

octave3.0 (1:3.0.1-2) unstable; urgency=low

  * Add library path at the beginning of the loadpath (work-around for
    #477556). Not closing the bug, as this is only fixing the symptoms, not
    the cause.

 -- Thomas Weber <thomas.weber.mail@gmail.com>  Sat, 26 Apr 2008 11:38:27 +0200

octave3.0 (1:3.0.1-1) unstable; urgency=low

  * New upstream release
  * Drop dpatches (applied upstream):