@@ -11,7 +11,10 @@ octave3.0 (1:3.0.1-5) UNRELEASED; urgency=low
 
   * debian/control: Bump Standards-Version to 3.8.0 (no changes needed)
 
- -- Rafael Laboissiere <rafael@debian.org>  Mon, 23 Jun 2008 20:33:02 +0200
+  * debian/rules: Include the debian/watch file the source package
+    (complies with Policy 4.11)
+
+ -- Rafael Laboissiere <rafael@debian.org>  Mon, 23 Jun 2008 20:38:00 +0200
 
 octave3.0 (1:3.0.1-4) unstable; urgency=low
 
